# ai-code-detection

./: .gitignore  README.md  main.py  pyproject.toml  train.sh
jobs/: main.py
model/contrastive/: train.sh
model/contrastive/model/: model.py
model/embedding/: __init__.py  bagging.py  k_fold.py
model/embedding/utils/: helper.py
model/llm/: zero_shot.py
notebook/: 4_transformers.ipynb  5_chunk_data.ipynb  6_codegptsensor.ipynb
